--- a/Client/package.json
+++ b/Client/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.6.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.476.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
