--- a/Server/package.json
+++ b/Server/package.json
@@ -35,6 +35,7 @@
     "path": "^0.12.7",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   }
 }
